syntax = "proto3";

option go_package = "proto-example/app/proto/segregated_with_package";

package city;

message City {
  string name = 1;
  string zip_code = 2;
  string country_name = 3;
}